# pii-washer

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  pyinstaller_entry.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
archive/session-removal/tests/: archived_test_fragments.py
assets/app-icons/: pii-washer-app-icon.icns
docs/: codex-review-tracker.md  roadmap.md
docs/decisions/: 001-field-label-false-positive-strategy.md
docs/superpowers/plans/: 2026-03-18-detection-refinement.md  2026-03-27-bug-fix-batch.md  2026-04-02-codex-review-remediation.md  2026-04-03-github-actions-release.md  2026-04-03-multi-format-support.md  2026-04-18-housekeeping-release-hardening.md  2026-04-18-milestone-2-correctness.md
docs/superpowers/specs/: 2026-03-18-detection-refinement-design.md  2026-03-27-bug-fix-batch-design.md  2026-03-27-session-removal-design.md  2026-04-02-codex-review-remediation-design.md  2026-04-03-multi-format-support-design.md
pii-washer-ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
pii-washer-ui/src/: App.tsx  index.css
pii-washer-ui/src/api/: client.ts  detections.ts  health.ts  sessions.ts  settings.ts  workflow.ts
pii-washer-ui/src/components/: ErrorBoundary.tsx  theme-provider.tsx
pii-washer-ui/src/hooks/: use-analyze-document.ts  use-detections.ts  use-sessions.ts  use-workflow.ts
pii-washer-ui/src/lib/: pii-colors.ts  runtime.ts  tab-routing.ts
pii_shield/: app.py  pii_detection_engine.py  placeholder_generator.py  session_manager.py  temp_data_store.py  text_substitution_engine.py
pii_shield/tests/: test_document_loader.py  test_pii_detection_engine.py  test_placeholder_generator.py  test_session_manager.py  test_temp_data_store.py  test_text_substitution_engine.py
pii_washer/: __init__.py  document_loader.py  name_recognizer.py  pii_detection_engine.py  placeholder_generator.py  session_manager.py  temp_data_store.py  text_substitution_engine.py
pii_washer/api/: __init__.py  __main__.py  config.py  errors.py  exceptions.py  main.py  models.py  router.py  update_checker.py
pii_washer/data/: capitalized_word_exclusions.json  common_first_names.json  us_cities_top200.json
pii_washer/extractors/: base.py  csv_ext.py  docx.py  html.py  pdf.py  xlsx.py
pii_washer/tests/: test_api.py  test_api_exceptions.py  test_api_integration.py  test_document_loader.py  test_extractors_base.py  test_extractors_csv.py  test_extractors_docx.py  test_extractors_html.py  test_extractors_pdf.py  test_extractors_xlsx.py  test_name_recognizer.py  test_pii_detection_engine.py  test_placeholder_generator.py  test_session_manager.py  test_temp_data_store.py  test_text_substitution_engine.py  test_update_checker.py
(+38 files in other folders)
