[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-washer"
version = "1.0.1"
description = "Local-only PII detection and text sanitization tool"
requires-python = ">= 3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "tronbonjovi" }]
dependencies = [
    "presidio-analyzer >= 2.2.359",
    "spacy >= 3.8.0, < 4.0",
    "fastapi >= 0.111.0",
    "uvicorn >= 0.29.0",
    "python-multipart >= 0.0.9",
    "tldextract >= 5.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview >= 5.0",
]
dev = [
    "pytest >= 9.0.0",
    "httpx >= 0.27.0",
]

[tool.setuptools.packages.find]
include = ["pii_washer*"]
exclude = ["pii_washer.tests*"]
