[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-washer"
version = "1.1.1"
description = "Local-only PII detection and text sanitization tool"
requires-python = ">= 3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "tronbonjovi" }]
dependencies = [
    "presidio-analyzer >= 2.2.359",
    "spacy >= 3.8.0, < 4.0",
    "fastapi >= 0.111.0",
    "uvicorn >= 0.29.0",
    "python-multipart >= 0.0.9",
    "tldextract >= 5.0",
    "httpx >= 0.27.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview >= 5.0",
]
dev = [
    "pytest >= 9.0.0",
    "httpx >= 0.27.0",
    "ruff >= 0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length enforced loosely via line-length setting
    "SIM102", # collapsible-if — often less readable when collapsed
    "SIM103", # needless-bool — sometimes clearer to be explicit
]

[tool.ruff.lint.per-file-ignores]
"pii_washer/tests/*" = ["B007", "F841"]
"pii_washer/pii_detection_engine.py" = ["F841"]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring real Presidio/spaCy model",
]

[tool.setuptools.packages.find]
include = ["pii_washer*"]
exclude = ["pii_washer.tests*"]
